[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/guns/19.png" type="Texture" id=1]
[ext_resource path="res://weapons/grenade_launcher.gd" type="Script" id=2]

[node name="GrenadeLauncher" type="Node2D"]
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 12, 0 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
